[package]
name = "flex_pool"
version = "2.0.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.6.0" }
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.2.3" }
oracle = { git = "https://github.com/ociswap/oracle", tag = "v1.2.6" }
flex_pool_hooks = { path = "hooks" }

[dev-dependencies]
radix-transactions = "1.2.0"
radix-engine = "1.2.0"
scrypto-test = "1.2.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.1" }
flex_pool_test_helper = { path = "test_helper" }
pretty_assertions = "1.3.0"
test-case = "3"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
