[package]
name = "ociswap_pool_test_helper"
version = "0.1.1"
edition = "2021"

[dependencies]
scrypto = "1.3.0"
radix-transactions = "1.3.0"
radix-engine = "1.3.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.8.0" }
ociswap_pool = { path = ".." }
registry_test_helper = { path = "../registry/test_helper" }
pretty_assertions = "1.3.0"
lazy_static = "1.4.0"
